--- a/src/Afterman.nRepo.NHibernate/Afterman.nRepo.NHibernate.csproj
+++ b/src/Afterman.nRepo.NHibernate/Afterman.nRepo.NHibernate.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3C84CAAB-C3F0-41C7-9DFF-6FAFA2FC2E0F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{0F992D56-2D58-42CE-99B2-B4DFDFD5EB89}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Afterman.nRepo.Samples</RootNamespace>
-    <AssemblyName>Afterman.nRepo.Samples</AssemblyName>
+    <RootNamespace>Afterman.nRepo.NHibernate</RootNamespace>
+    <AssemblyName>Afterman.nRepo.NHibernate</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,20 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>Afterman.nRepo.Samples.Program</StartupObject>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentNHibernate">
-      <HintPath>..\..\src\Afterman.nRepo.NHibernate\bin\Debug\FluentNHibernate.dll</HintPath>
+      <HintPath>..\bin\Debug\FluentNHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\..\Afterman.nRepo\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\..\Afterman.nRepo\packages\NHibernate.4.0.0.4000\lib\net40\NHibernate.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="NHibernate">
+      <HintPath>..\bin\Debug\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,18 +46,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="DbPlatforms\Db2Platform.cs" />
+    <Compile Include="DbPlatforms\IDatabasePlatform.cs" />
+    <Compile Include="DbPlatforms\InformixDRDAPlatform.cs" />
+    <Compile Include="DbPlatforms\InformixPlatform.cs" />
+    <Compile Include="DbPlatforms\InformixSqlLinkPlatform.cs" />
+    <Compile Include="DbPlatforms\MsSqlServerPlatform.cs" />
+    <Compile Include="DbPlatforms\MySqlPlatform.cs" />
+    <Compile Include="DbPlatforms\OdbcPlatform.cs" />
+    <Compile Include="DbPlatforms\OraclePlatform.cs" />
+    <Compile Include="DbPlatforms\PostgresPlatform.cs" />
+    <Compile Include="DbPlatforms\SQLitePlatform.cs" />
+    <Compile Include="ExtensionPoint.cs" />
+    <Compile Include="Sessions\ISessionBuilder.cs" />
+    <Compile Include="Configuration\NHibernateConfiguration.cs" />
+    <Compile Include="Configuration\NHibernateDataAccessor.cs" />
+    <Compile Include="UnitsOfWork\NHibernateUnitOfWork.cs" />
+    <Compile Include="UnitsOfWork\NHibernateUnitOfWorkFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usage\SampleUsage.cs" />
+    <Compile Include="Sessions\SessionBuilder.cs" />
+    <Compile Include="Sessions\SessionFactoryBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Afterman.nRepo\Afterman.nRepo.csproj">
+    <ProjectReference Include="..\Afterman.nRepo\Afterman.nRepo.csproj">
       <Project>{428c6025-fe2e-4385-8908-9443641c1388}</Project>
       <Name>Afterman.nRepo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Afterman.nRepo.NHibernate\Afterman.nRepo.NHibernate.csproj">
-      <Project>{0f992d56-2d58-42ce-99b2-b4dfdfd5eb89}</Project>
-      <Name>Afterman.nRepo.NHibernate</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
