--- a/tests/Afterman.nRepo.Tests/Afterman.nRepo.Tests.csproj
+++ b/tests/Afterman.nRepo.Tests/Afterman.nRepo.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3C84CAAB-C3F0-41C7-9DFF-6FAFA2FC2E0F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{58C2E4D3-F939-493A-B3E4-193617D6913F}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Afterman.nRepo.Samples</RootNamespace>
-    <AssemblyName>Afterman.nRepo.Samples</AssemblyName>
+    <RootNamespace>Afterman.nRepo.Tests</RootNamespace>
+    <AssemblyName>Afterman.nRepo.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,21 +29,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>Afterman.nRepo.Samples.Program</StartupObject>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentNHibernate">
-      <HintPath>..\..\src\Afterman.nRepo.NHibernate\bin\Debug\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\..\Afterman.nRepo\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\..\Afterman.nRepo\packages\NHibernate.4.0.0.4000\lib\net40\NHibernate.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,22 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ConfigurationTests.cs" />
+    <Compile Include="EventTests.cs" />
+    <Compile Include="ExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usage\SampleUsage.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Afterman.nRepo\Afterman.nRepo.csproj">
-      <Project>{428c6025-fe2e-4385-8908-9443641c1388}</Project>
-      <Name>Afterman.nRepo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Afterman.nRepo.NHibernate\Afterman.nRepo.NHibernate.csproj">
-      <Project>{0f992d56-2d58-42ce-99b2-b4dfdfd5eb89}</Project>
-      <Name>Afterman.nRepo.NHibernate</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="RepositoryTests.cs" />
+    <Compile Include="UnitOfWorkTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
